--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+hibernate.jdbc.lob.non_contextual_creation=true
