--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.org.springframework=ERROR
-spring.datasource.url=jdbc:mysql://localhost:3306/hotelium-new?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
+spring.datasource.url=jdbc:mysql://localhost:3306/hotelium?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username=root
-spring.datasource.password=Admin003#
+spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
