--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 logging.level.org.springframework=ERROR
-spring.datasource.url=jdbc:mysql://localhost:3306/hotelium?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
+spring.datasource.url=jdbc:mysql://localhost:33061/hotelium?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username=root
-spring.datasource.password=adminadmin
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
+springdoc.api-docs.path=/api-docs
+server.servlet.context-path=/hotelium-service
