--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ logging.level.org.springframework=ERROR
 spring.datasource.url=jdbc:mysql://localhost:33061/hotelium?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username=root
 spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
