--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,15 @@ logging.level.org.springframework=ERROR
 spring.datasource.url=jdbc:mysql://localhost:3306/hotelium?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
+
 server.port=8080
+springdoc.api-docs.path=/api-docs
+spring.main.allow-bean-definition-overriding=true
+server.forward-headers-strategy=framework
+spring.main.allow-circular-references=true
